# fast-feed-parser

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  PERFORMANCE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: feed_generator.cpp  feed_generator.h  main.cpp  parser.cpp  parser.h  spsc_ringbuffer.h  util.h
